tests/fixtures/errors/unexpected_char.lazy
// error: Unexpected character
//   --> tests/fixtures/errors/unexpected_char.lazy:12:7
//    |
// 12 | y = x @ 3
//    |       ^
//
// Found an unexpected character in the source code.
//
// help: Remove the invalid character or check for typos.

x = 5
y = x @ 3
y
